# muplar-wayland

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: compositor.rs
src/core/input/: pointer.rs
src/core/state/: input.rs  mod.rs  scene.rs  windows.rs
src/core/surface/: commit.rs  tests.rs
src/core/wayland/ext/: data_device.rs
src/core/wayland/wayland/: compositor.rs
src/core/wayland/wlr/: data_control.rs
src/core/wayland/xdg/: xdg_popup.rs  xdg_surface.rs  xdg_wm_base.rs
src/ffi/: api.rs  c_api.rs
src/platform/: mod.rs
src/platform/macos/: WWNCompositorBridge.h  WWNCompositorBridge.m  WWNPlatformCallbacks.h  WWNPlatformCallbacks.m  WWNPopupWindow.m  WWNWindow.m  main.m
src/platform/macos/ui/Settings/: WWNPreferencesManager.m  WWNWaypipeRunner.m
src/tests/: integration.rs  surface.rs
